# Career-Piggybank

./: .gitignore  AI_FEATURES.md  ARCHITECTURE.md  Makefile  README.md
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  amount_pacing.py  base.py  clarify.py  classifier_llm.py  coach.py  envelope_recommend.py  event_capture.py  intent_router.py  product_match.py  profile_read.py  registry.py  strength.py
apps/api/app/core/: config.py  llm.py
apps/api/app/engines/: __init__.py  allocation_policy.py  allocator.py  career_verification.py  classifier.py  facts.py  forecast.py  gig_profile.py  income_streams.py  pacing.py  peer_envelopes.py  product_match.py  spending_profile.py  tax_envelope.py
apps/api/evals/: RESULTS.md  __init__.py  golden_set.json  persona_golden_set.json  run_eval.py  run_persona_eval.py
apps/api/tests/: conftest.py  test_agents_registry.py  test_allocation_policy.py  test_allocator.py  test_bank.py  test_career_verification.py  test_clarify.py  test_classifier.py  test_classifier_llm.py  test_coach.py  test_coach_orchestrator.py  test_envelope_pacing.py  test_event_capture.py  test_facts.py  test_forecast.py  test_gig_profile.py  test_golden_set.py  test_income_streams.py  test_job_proof.py  test_layering.py  test_metrics.py  test_peer_envelopes.py  test_persona_golden_set.py  test_personalization_v2.py  test_product_match.py  test_product_match_agent.py  test_profile_read.py  test_spending_profile.py  test_strength.py  test_tax_envelope.py  test_user_profile.py
(+109 files in other folders)
