[project]
name = "career-piggybank-api"
version = "0.1.0"
description = "긱워커 생활금융 플랫폼 백엔드 (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
# evals/(골든셋 평가)·tests/는 배포 패키지가 아님 — 앱 코드만 명시 (flat-layout 자동탐색 오류 방지)
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
